Name:           numbers
Version:        3000.0.0.0
License:        BSD3
License-file:   LICENSE
Author:         Lennart Augustsson
Maintainer:     Lennart Augustsson
Category:       Data, Math
Synopsis:       Various number types
Description:
  Instances of the numerical classes for a variety of
  different numbers: (computable) real numbers,
  arbitrary precision fixed numbers,
  arbitrary precision floating point numbers,
  differentiable numbers, symbolic numbers,
  natural numbers, interval arithmetic.
Build-type:	    Simple

cabal-version:  >= 1.8

homepage:   https://github.com/DanBurton/numbers
source-repository head
  type:     git
  location: git://github.com/DanBurton/numbers.git
source-repository this
  type:     git
  location: git://github.com/DanBurton/numbers.git
  tag:      numbers-3000.0.0.0

Library
  Build-Depends:    base >= 3 && < 5
  Exposed-modules:
    Data.Number.Symbolic Data.Number.Dif
    Data.Number.CReal Data.Number.Fixed
    Data.Number.Interval Data.Number.BigFloat
    Data.Number.Natural
  Other-modules:    Data.Number.Vectorspace Data.Number.FixedFunctions

